--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,16 @@
 <resources>
     <string name="app_name">cipher b4</string>
     <string name="cipher_b4">CIPHER B4</string>
+    <string-array name="cipher">
+        <item>Caesar</item>
+        <item>New</item>
+        <item>№3</item>
+        <item>№4</item>
+        <item>№4</item>
+        <item>№4</item>
+        <item>№4</item>
+        <item>№4</item>
+        <item>№4</item>
+        <item>№4</item>
+    </string-array>
 </resources>
