--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
     <string name="cipher_b4">CIPHER B4</string>
     <string-array name="cipher">
         <item>Caesar</item>
-        <item>New</item>
-        <item>№3</item>
+        <item>Secret_Word</item>
+        <item>Vigenere</item>
         <item>№4</item>
         <item>№4</item>
         <item>№4</item>
